dungeon: Generate new room ID on creation.
